# ZFSMgr

./: .gitignore  CMakeLists.txt  README.md  app.py  appicon.rc  build-appimage.sh  build-linux-appimage.sh  build-linux-appimage.ssh  build-linux.sh  build-macos.sh  build-windows.ps1  ccodex  ccodex-win.cmd  ccodex.mac  r  requirements.txt  resources.qrc
.github/workflows/: build-packages.yml
build-windows-alt/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-windows-alt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cppqt/: CMakeLists.txt  README.md  build-linux  build-macos  build-macos.ps1  build-macos.sh  build-windows.ps1
cppqt/src/: connectiondialog.h  connectionstore.cpp  connectionstore.h  main.cpp  mainwindow.cpp  mainwindow.h  masterpassworddialog.cpp  masterpassworddialog.h  secretcipher.cpp  secretcipher.h
daemon/: CMakeLists.txt  README.md  libssh_daemon.cpp  main.cpp
docs/: Ejecuciones acumulables.md  automatizacion_release_github.md  backlog  cross-compiling-linux.md  daemon-transport-implementation.md  daemon-transport-protocol.md  daemon2daemon.md  daemonize-allow.md  daemonize.md  diseno_tecnico_capturas_ui_ayuda.md  diseno_tecnico_conectividad.md  diseno_tecnico_daemon_nativo_zed.md  diseno_tecnico_endurecimiento_gsa.md  diseno_tecnico_gsa_freebsd.md  diseno_tecnico_instalacion_comandos_auxiliares.md  diseno_tecnico_modelo_conninfo_poolinfo_dsinfo.md  diseno_tecnico_refactor_treeviews_conexion.md  diseno_y_funcionamiento_gsa.md  estado_actual_instalacion_comandos_auxiliares.md  incidencias_release_github.md  plan_implementacion_comandos_auxiliares.md  propuesta_endurecimiento_gsa.md  propuesta_permisos_dataset.md  pruebas_gsa_freebsd.md  remote-daemon-design.md
elitau/: README.md
elitau/config/: config.exs
elitau/test/: zfsmgr_elixir_test.exs
help/en/: accion_clonar.md  accion_copiar.md  accion_desde_dir.md  accion_desglosar.md  accion_ensamblar.md  accion_hacia_dir.md  accion_nivelar.md  accion_sincronizar.md  atajos_estados.md  configuracion_archivos.md  logs_aplicacion.md  manual_rapido.md  menus_contextuales.md  propiedades_inline_columnas.md
help/es/: accion_clonar.md  accion_copiar.md  accion_desde_dir.md  accion_desglosar.md  accion_diff.md  accion_ensamblar.md  accion_hacia_dir.md  accion_nivelar.md  accion_sincronizar.md  atajos_estados.md  conexiones_windows.md  configuracion_archivos.md  logs_aplicacion.md  manual_rapido.md  menus_contextuales.md  propiedades_inline_columnas.md
help/zh/: accion_clonar.md  accion_copiar.md  accion_desde_dir.md  accion_desglosar.md  accion_ensamblar.md  accion_hacia_dir.md  accion_nivelar.md  accion_sincronizar.md  atajos_estados.md  configuracion_archivos.md  logs_aplicacion.md  manual_rapido.md  menus_contextuales.md  propiedades_inline_columnas.md
i18n/: en.json  es.json  legacy_keys.json  zh.json
icons/: ZFSMgr.icns
locales/: ca.json  de.json  en.json  es.json  eu.json  fr.json  it.json  pt-BR.json  ru.json  zh.json
packaging/: build.py  install-linux.sh  install-macos.sh  install-windows.ps1
prompt/: 00_ssh_wrapper_base.txt  01_unix_path_wrapper.txt  02_sudo_wrappers.txt  03_windows_wrap_remote_command.txt  10_refresh_os_probe.txt  11_refresh_command_detection.txt  12_refresh_zfs_version_probe.txt  13_refresh_pool_inventory.txt  14_refresh_importable_pools_probe.txt  15_refresh_mount_inventory.txt  16_dataset_inventory_and_guid.txt  17_dataset_properties_queries.txt  18_permissions_queries.txt  19_pool_actions_commands.txt  20_pool_create_command.txt  21_dataset_manage_commands.txt  22_snapshot_commands.txt  23_transfer_copy_clone_diff.txt  24_transfer_sync_rsync.txt  25_transfer_sync_tar_fallback.txt  26_advanced_breakdown_assemble.txt  27_gsa_probe_and_props.txt  28_gsa_install_uninstall.txt  29_windows_msys2_install.txt  30_mount_prechecks_and_umount.txt  31_gsa_log_fetch.txt  32_helper_package_manager_probe.txt  33_remote_scripts_manager.txt  README.txt
prompts/: InmediatasVSPending.txt  zfslib_coreVSssh.txt
resources/: CMakeLists.txt  app.manifest  appicon.rc  resources.qrc
scripts/: build-cross.sh  build-freebsd.sh  build-linux.sh  build-macos.sh  build-windows-inno-linux.sh  build-windows.ps1  buildall-cross.sh  buildall.sh  capture-ui-docs.sh  deploy-daemon.ps1  deploy-daemon.sh  generate-daemon-keys.sh  migrate_i18n_keys.py  provision-cross-targets.sh  release-github.sh  setup-cross-linux.sh  test-copy-mac-win.sh  test_assemble_psrp.py  test_copy_snapshot.py  test_py_libzfs.py  use_pylibzfs.py
src/: agentversion.cpp  agentversion.h  connectiondatasettreecontroller.cpp  connectiondatasettreecontroller.h  connectiondatasettreecoordinator.cpp  connectiondatasettreecoordinator.h  connectiondatasettreepane.cpp  connectiondatasettreepane.h  connectiondatasettreewidget.cpp  connectiondatasettreewidget.h  connectiondialog.cpp  connectiondialog.h  connectionstore.cpp  connectionstore.h  daemon_main.cpp  daemon_rpc_protocol.h  daemon_transport.cpp  daemon_transport.h  daemonpayload.cpp  daemonpayload.h  gsaversion.cpp  gsaversion.h  helperinstallcatalog.cpp  helperinstallcatalog.h  i18nmanager.cpp  i18nmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_advanced.cpp  mainwindow_advanced_dir.cpp  mainwindow_connectiondatasettreedelegate.cpp  mainwindow_connectiondatasettreedelegate.h  mainwindow_connections.cpp  mainwindow_dataset_actions.cpp  mainwindow_dataset_manage.cpp  mainwindow_dataset_props.cpp  mainwindow_dataset_tree.cpp  mainwindow_dialogs.cpp  mainwindow_filebrowser.cpp  (+20 more)
tests/: gui_mainwindow_test.cpp  helpers_test.cpp  ui_doc_capture.cpp  ui_logic_test.cpp
toolchains/: freebsd-clang.cmake  macos-osxcross.cmake  windows-mingw64.cmake
vpython/: app.py  requirements.txt
vpython/locales/: ca.json  en.json  it.json  zh.json
vpython/scripts/: test_copy_snapshot.py
vpython/zfsmgr_actions/: __init__.py  client.py
zfsmgr_actions/: client.py
zfsmgr_elixir/: .gitignore  README.md  mix.exs
zfsmgr_elixir/config/: config.exs
zfsmgr_elixir/lib/: zfsmgr_elixir.ex
zfsmgr_elixir/test/: test_helper.exs
(+31 files in other folders)
